--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
+    <title>The YearBook</title>
+
+    <link rel="icon" href="./src/data/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/data/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/data/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./src/data/favicon/site.webmanifest" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0," />
   </head>
